# snyk-repo-diff

./: .gitignore  .snyk  Dockerfile  README.md  azure-pipelines.yml  cd.yml  ci.yaml  example_secrets.sh  foobar.csv  pyproject.toml  pyvenv.cfg  repo_diff.py  requirements.txt  snykv3.py
.circleci/: config.yml  continue_config.yml
.github/: CODEOWNERS
.github/workflows/: jira.yml  main.yml
output/: output.csv
