[tool.poetry]
name = "repo_diff"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.9.10"
pysnyk = "^0.6.2"
typer = "^0.4.0"
PyGithub = "^1.55"
python-gitlab = "^3.1.1"

[tool.poetry.dev-dependencies]
mypy = "^0.910"
black = {version = "^21.9b0", allow-prereleases = true}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
